--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <!-- import style -->
+        <link rel="stylesheet" type="text/css" href="./styles/style.css">
     </head>
 
     <body>
         <h1>Hello ALB World!</h1>
+        <h4 class="score-box">Score: 0</h4>
+        <div class="click-box">Click Me</div>
+
+        <!-- import script -->
+        <script src="./scripts/script.js"></script>
     </body>
 </html>
